{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 716,
  "lineage": "ef2dd657-ddb5-79d4-f610-043740191fc1",
  "resources": [
    {
      "module": "module.app_alb_asg_primary",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:loadbalancer/app/alb-app-e1-bb949a88/dd5f88931a425d1c",
            "arn_suffix": "app/alb-app-e1-bb949a88/dd5f88931a425d1c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-alb-app-e1-bb949a88-2018357973.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:015117030551:loadbalancer/app/alb-app-e1-bb949a88/dd5f88931a425d1c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-app-e1-bb949a88",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d36352fb60cacf36"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f6080adf93eba39"
              },
              {
                "subnet_id": "subnet-0f9ff3943622b57e5"
              }
            ],
            "subnets": [
              "subnet-02f6080adf93eba39",
              "subnet-0f9ff3943622b57e5"
            ],
            "tags": {
              "Name": "alb-app-e1"
            },
            "tags_all": {
              "Name": "alb-app-e1"
            },
            "vpc_id": "vpc-0b906e421c277c322",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.app_alb_asg_primary.random_id.suffix",
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main",
            "module.security_groups_primary.aws_security_group.alb_external_sg",
            "module.security_groups_primary.aws_security_group.alb_internal_sg",
            "module.security_groups_primary.aws_security_group.app_sg",
            "module.security_groups_primary.aws_security_group.db_sg",
            "module.security_groups_primary.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb_asg_primary",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:listener/app/alb-app-e1-bb949a88/dd5f88931a425d1c/c50b3394ac7da3f2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:targetgroup/tg-app-e1-bb949a88/411b02f424ef5a22",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:015117030551:listener/app/alb-app-e1-bb949a88/dd5f88931a425d1c/c50b3394ac7da3f2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:loadbalancer/app/alb-app-e1-bb949a88/dd5f88931a425d1c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_alb_asg_primary.aws_lb.this",
            "module.app_alb_asg_primary.aws_lb_target_group.this",
            "module.app_alb_asg_primary.random_id.suffix",
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main",
            "module.security_groups_primary.aws_security_group.alb_external_sg",
            "module.security_groups_primary.aws_security_group.alb_internal_sg",
            "module.security_groups_primary.aws_security_group.app_sg",
            "module.security_groups_primary.aws_security_group.db_sg",
            "module.security_groups_primary.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb_asg_primary",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:targetgroup/tg-app-e1-bb949a88/411b02f424ef5a22",
            "arn_suffix": "targetgroup/tg-app-e1-bb949a88/411b02f424ef5a22",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:015117030551:targetgroup/tg-app-e1-bb949a88/411b02f424ef5a22",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-app-e1-bb949a88",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-app-e1"
            },
            "tags_all": {
              "Name": "tg-app-e1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "dependencies": [
            "module.app_alb_asg_primary.random_id.suffix",
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main",
            "module.security_groups_primary.aws_security_group.alb_external_sg",
            "module.security_groups_primary.aws_security_group.alb_internal_sg",
            "module.security_groups_primary.aws_security_group.app_sg",
            "module.security_groups_primary.aws_security_group.db_sg",
            "module.security_groups_primary.aws_security_group.web_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_alb_asg_secondary",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:loadbalancer/app/alb-app-e2-a09deae6/196d7e6fcae5bc7b",
            "arn_suffix": "app/alb-app-e2-a09deae6/196d7e6fcae5bc7b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-alb-app-e2-a09deae6-691406545.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:015117030551:loadbalancer/app/alb-app-e2-a09deae6/196d7e6fcae5bc7b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-app-e2-a09deae6",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00bf841979d74442b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d54ef60706fe65a"
              },
              {
                "subnet_id": "subnet-0f0148a4bda4f58b6"
              }
            ],
            "subnets": [
              "subnet-06d54ef60706fe65a",
              "subnet-0f0148a4bda4f58b6"
            ],
            "tags": {
              "Name": "alb-app-e2"
            },
            "tags_all": {
              "Name": "alb-app-e2"
            },
            "vpc_id": "vpc-054d10f11cafece0f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.app_alb_asg_secondary.random_id.suffix",
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main",
            "module.security_groups_secondary.aws_security_group.alb_external_sg",
            "module.security_groups_secondary.aws_security_group.alb_internal_sg",
            "module.security_groups_secondary.aws_security_group.app_sg",
            "module.security_groups_secondary.aws_security_group.db_sg",
            "module.security_groups_secondary.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb_asg_secondary",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:listener/app/alb-app-e2-a09deae6/196d7e6fcae5bc7b/eb9808c027dcb799",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:targetgroup/tg-app-e2-a09deae6/f44a76c24440028c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:015117030551:listener/app/alb-app-e2-a09deae6/196d7e6fcae5bc7b/eb9808c027dcb799",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:loadbalancer/app/alb-app-e2-a09deae6/196d7e6fcae5bc7b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_alb_asg_secondary.aws_lb.this",
            "module.app_alb_asg_secondary.aws_lb_target_group.this",
            "module.app_alb_asg_secondary.random_id.suffix",
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main",
            "module.security_groups_secondary.aws_security_group.alb_external_sg",
            "module.security_groups_secondary.aws_security_group.alb_internal_sg",
            "module.security_groups_secondary.aws_security_group.app_sg",
            "module.security_groups_secondary.aws_security_group.db_sg",
            "module.security_groups_secondary.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb_asg_secondary",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:targetgroup/tg-app-e2-a09deae6/f44a76c24440028c",
            "arn_suffix": "targetgroup/tg-app-e2-a09deae6/f44a76c24440028c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:015117030551:targetgroup/tg-app-e2-a09deae6/f44a76c24440028c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-app-e2-a09deae6",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-app-e2"
            },
            "tags_all": {
              "Name": "tg-app-e2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "dependencies": [
            "module.app_alb_asg_secondary.random_id.suffix",
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main",
            "module.security_groups_secondary.aws_security_group.alb_external_sg",
            "module.security_groups_secondary.aws_security_group.alb_internal_sg",
            "module.security_groups_secondary.aws_security_group.app_sg",
            "module.security_groups_secondary.aws_security_group.db_sg",
            "module.security_groups_secondary.aws_security_group.web_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013fb48247da0dfe0",
            "arn": "arn:aws:ec2:us-east-1:015117030551:elastic-ip/eipalloc-013fb48247da0dfe0",
            "domain": "vpc",
            "id": "eipalloc-013fb48247da0dfe0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-230-122-118.compute-1.amazonaws.com",
            "public_ip": "34.230.122.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-us-east-1"
            },
            "tags_all": {
              "Name": "nat-eip-us-east-1"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:internet-gateway/igw-0ac9a812f55de1d59",
            "id": "igw-0ac9a812f55de1d59",
            "owner_id": "015117030551",
            "tags": {
              "Name": "igw-us-east-1"
            },
            "tags_all": {
              "Name": "igw-us-east-1"
            },
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "dependencies": [
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013fb48247da0dfe0",
            "association_id": "eipassoc-0979ffbbe79e2365a",
            "connectivity_type": "public",
            "id": "nat-00e8bb20a63f78ae9",
            "network_interface_id": "eni-072f2a14b251a7421",
            "private_ip": "10.0.1.137",
            "public_ip": "34.230.122.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03ff07066b85532ba",
            "tags": {
              "Name": "nat-gateway-us-east-1"
            },
            "tags_all": {
              "Name": "nat-gateway-us-east-1"
            }
          },
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:route-table/rtb-00e9ce5eb5ceedfc4",
            "id": "rtb-00e9ce5eb5ceedfc4",
            "owner_id": "015117030551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00e8bb20a63f78ae9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-rt-0-us-east-1"
            },
            "tags_all": {
              "Name": "private-app-rt-0-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:route-table/rtb-00278255cad452ccf",
            "id": "rtb-00278255cad452ccf",
            "owner_id": "015117030551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00e8bb20a63f78ae9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-rt-1-us-east-1"
            },
            "tags_all": {
              "Name": "private-app-rt-1-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:route-table/rtb-0e41bc454fb6cf103",
            "id": "rtb-0e41bc454fb6cf103",
            "owner_id": "015117030551",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-db-rt-us-east-1"
            },
            "tags_all": {
              "Name": "private-db-rt-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:route-table/rtb-009f61a59b862bb27",
            "id": "rtb-009f61a59b862bb27",
            "owner_id": "015117030551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac9a812f55de1d59",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-us-east-1"
            },
            "tags_all": {
              "Name": "public-rt-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fb3763fdf1c7801",
            "route_table_id": "rtb-00e9ce5eb5ceedfc4",
            "subnet_id": "subnet-0f9ff3943622b57e5"
          },
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aea0cec91fe4c14a",
            "route_table_id": "rtb-00278255cad452ccf",
            "subnet_id": "subnet-02f6080adf93eba39"
          },
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f8061bd1431d99c",
            "route_table_id": "rtb-0e41bc454fb6cf103",
            "subnet_id": "subnet-04882385e9c1b6057"
          },
          "dependencies": [
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079733920a980db5e",
            "route_table_id": "rtb-0e41bc454fb6cf103",
            "subnet_id": "subnet-004dda22aa60dba6a"
          },
          "dependencies": [
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093e99827256608db",
            "route_table_id": "rtb-009f61a59b862bb27",
            "subnet_id": "subnet-03ff07066b85532ba"
          },
          "dependencies": [
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0763ee97ac571fa15",
            "route_table_id": "rtb-009f61a59b862bb27",
            "subnet_id": "subnet-0b899a041426acd92"
          },
          "dependencies": [
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnets",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:subnet/subnet-0f9ff3943622b57e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9ff3943622b57e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-0-us-east-1"
            },
            "tags_all": {
              "Name": "app-subnet-0-us-east-1"
            },
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "dependencies": [
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:subnet/subnet-02f6080adf93eba39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f6080adf93eba39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-1-us-east-1"
            },
            "tags_all": {
              "Name": "app-subnet-1-us-east-1"
            },
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "dependencies": [
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:subnet/subnet-04882385e9c1b6057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04882385e9c1b6057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-0-us-east-1"
            },
            "tags_all": {
              "Name": "db-subnet-0-us-east-1"
            },
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "dependencies": [
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:subnet/subnet-004dda22aa60dba6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004dda22aa60dba6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-1-us-east-1"
            },
            "tags_all": {
              "Name": "db-subnet-1-us-east-1"
            },
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "dependencies": [
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:subnet/subnet-03ff07066b85532ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ff07066b85532ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0-us-east-1"
            },
            "tags_all": {
              "Name": "public-subnet-0-us-east-1"
            },
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "dependencies": [
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:subnet/subnet-0b899a041426acd92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b899a041426acd92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1-us-east-1"
            },
            "tags_all": {
              "Name": "public-subnet-1-us-east-1"
            },
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "dependencies": [
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.networking_primary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:vpc/vpc-0b906e421c277c322",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000d73a27bf281558",
            "default_route_table_id": "rtb-0d6357e342a211b7a",
            "default_security_group_id": "sg-017554f2509fcf836",
            "dhcp_options_id": "dopt-012914b46a5b5fab6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b906e421c277c322",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6357e342a211b7a",
            "owner_id": "015117030551",
            "tags": {
              "Name": "vpc-us-east-1"
            },
            "tags_all": {
              "Name": "vpc-us-east-1"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bce086e55e44f1b1",
            "arn": "arn:aws:ec2:us-east-2:015117030551:elastic-ip/eipalloc-0bce086e55e44f1b1",
            "domain": "vpc",
            "id": "eipalloc-0bce086e55e44f1b1",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-119-62-46.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.62.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-us-east-2"
            },
            "tags_all": {
              "Name": "nat-eip-us-east-2"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:internet-gateway/igw-0194836e4ef083007",
            "id": "igw-0194836e4ef083007",
            "owner_id": "015117030551",
            "tags": {
              "Name": "igw-us-east-2"
            },
            "tags_all": {
              "Name": "igw-us-east-2"
            },
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "dependencies": [
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bce086e55e44f1b1",
            "association_id": "eipassoc-0c641aab5755e4147",
            "connectivity_type": "public",
            "id": "nat-0f41d9bc86559331c",
            "network_interface_id": "eni-0ebd45bd34af8b24a",
            "private_ip": "10.1.1.38",
            "public_ip": "18.119.62.46",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ed32de5eff4dd599",
            "tags": {
              "Name": "nat-gateway-us-east-2"
            },
            "tags_all": {
              "Name": "nat-gateway-us-east-2"
            }
          },
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:route-table/rtb-04edd16ebdb5fbe4e",
            "id": "rtb-04edd16ebdb5fbe4e",
            "owner_id": "015117030551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f41d9bc86559331c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-rt-0-us-east-2"
            },
            "tags_all": {
              "Name": "private-app-rt-0-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:route-table/rtb-0eba4b22a7a898d52",
            "id": "rtb-0eba4b22a7a898d52",
            "owner_id": "015117030551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f41d9bc86559331c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-rt-1-us-east-2"
            },
            "tags_all": {
              "Name": "private-app-rt-1-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:route-table/rtb-0ec7fd2c07cf43207",
            "id": "rtb-0ec7fd2c07cf43207",
            "owner_id": "015117030551",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-db-rt-us-east-2"
            },
            "tags_all": {
              "Name": "private-db-rt-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:route-table/rtb-07fb80d4833024378",
            "id": "rtb-07fb80d4833024378",
            "owner_id": "015117030551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0194836e4ef083007",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-us-east-2"
            },
            "tags_all": {
              "Name": "public-rt-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc4c75fa5d14bd1a",
            "route_table_id": "rtb-04edd16ebdb5fbe4e",
            "subnet_id": "subnet-06d54ef60706fe65a"
          },
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d54bbaf4560ccc26",
            "route_table_id": "rtb-0eba4b22a7a898d52",
            "subnet_id": "subnet-0f0148a4bda4f58b6"
          },
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0680241866551186a",
            "route_table_id": "rtb-0ec7fd2c07cf43207",
            "subnet_id": "subnet-083a68392aed00ddc"
          },
          "dependencies": [
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086beb5744ea7ec9c",
            "route_table_id": "rtb-0ec7fd2c07cf43207",
            "subnet_id": "subnet-0f112332ff4fd2e07"
          },
          "dependencies": [
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb428a07f19e9bec",
            "route_table_id": "rtb-07fb80d4833024378",
            "subnet_id": "subnet-0ed32de5eff4dd599"
          },
          "dependencies": [
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088409fa92315ce12",
            "route_table_id": "rtb-07fb80d4833024378",
            "subnet_id": "subnet-0cd46cbf93872f286"
          },
          "dependencies": [
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnets",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:subnet/subnet-06d54ef60706fe65a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d54ef60706fe65a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-0-us-east-2"
            },
            "tags_all": {
              "Name": "app-subnet-0-us-east-2"
            },
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "dependencies": [
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:subnet/subnet-0f0148a4bda4f58b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0148a4bda4f58b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-1-us-east-2"
            },
            "tags_all": {
              "Name": "app-subnet-1-us-east-2"
            },
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "dependencies": [
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:subnet/subnet-083a68392aed00ddc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083a68392aed00ddc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-0-us-east-2"
            },
            "tags_all": {
              "Name": "db-subnet-0-us-east-2"
            },
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "dependencies": [
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:subnet/subnet-0f112332ff4fd2e07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f112332ff4fd2e07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-1-us-east-2"
            },
            "tags_all": {
              "Name": "db-subnet-1-us-east-2"
            },
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "dependencies": [
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:subnet/subnet-0ed32de5eff4dd599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed32de5eff4dd599",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0-us-east-2"
            },
            "tags_all": {
              "Name": "public-subnet-0-us-east-2"
            },
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "dependencies": [
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:subnet/subnet-0cd46cbf93872f286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd46cbf93872f286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "015117030551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1-us-east-2"
            },
            "tags_all": {
              "Name": "public-subnet-1-us-east-2"
            },
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "dependencies": [
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_secondary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.networking_secondary.provider[\"registry.terraform.io/hashicorp/aws\"].region",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:vpc/vpc-054d10f11cafece0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05f1c39b15421aba1",
            "default_route_table_id": "rtb-0a73898edb14c3e72",
            "default_security_group_id": "sg-01ebad18ccaed7c19",
            "dhcp_options_id": "dopt-0dd1365176c7399a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054d10f11cafece0f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a73898edb14c3e72",
            "owner_id": "015117030551",
            "tags": {
              "Name": "vpc-us-east-2"
            },
            "tags_all": {
              "Name": "vpc-us-east-2"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_external_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:security-group/sg-0bd7edccf89a61363",
            "description": "External ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd7edccf89a61363",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-external-sg-us-east-1",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-external-sg-us-east-1"
            },
            "tags_all": {
              "Name": "alb-external-sg-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_internal_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:security-group/sg-0d36352fb60cacf36",
            "description": "Internal ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d36352fb60cacf36",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-internal-sg-us-east-1",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-internal-sg-us-east-1"
            },
            "tags_all": {
              "Name": "alb-internal-sg-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:security-group/sg-0a6d481c85ef2f305",
            "description": "App Tier SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6d481c85ef2f305",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1da16b06a338f30"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg-us-east-1",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg-us-east-1"
            },
            "tags_all": {
              "Name": "app-sg-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main",
            "module.security_groups_primary.aws_security_group.alb_external_sg",
            "module.security_groups_primary.aws_security_group.web_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:security-group/sg-06a36b13877870da6",
            "description": "DB Tier SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a36b13877870da6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a6d481c85ef2f305"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg-us-east-1",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg-us-east-1"
            },
            "tags_all": {
              "Name": "db-sg-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main",
            "module.security_groups_primary.aws_security_group.alb_external_sg",
            "module.security_groups_primary.aws_security_group.app_sg",
            "module.security_groups_primary.aws_security_group.web_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015117030551:security-group/sg-0a1da16b06a338f30",
            "description": "Web Tier SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1da16b06a338f30",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd7edccf89a61363"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd7edccf89a61363"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg-us-east-1",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-us-east-1"
            },
            "tags_all": {
              "Name": "web-sg-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main",
            "module.security_groups_primary.aws_security_group.alb_external_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_external_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:security-group/sg-090c081acc6c44652",
            "description": "External ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090c081acc6c44652",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-external-sg-us-east-2",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-external-sg-us-east-2"
            },
            "tags_all": {
              "Name": "alb-external-sg-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_internal_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:security-group/sg-00bf841979d74442b",
            "description": "Internal ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bf841979d74442b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-internal-sg-us-east-2",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-internal-sg-us-east-2"
            },
            "tags_all": {
              "Name": "alb-internal-sg-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:security-group/sg-0413b19ec3af25c00",
            "description": "App Tier SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0413b19ec3af25c00",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02091ff6699df9958"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg-us-east-2",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg-us-east-2"
            },
            "tags_all": {
              "Name": "app-sg-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main",
            "module.security_groups_secondary.aws_security_group.alb_external_sg",
            "module.security_groups_secondary.aws_security_group.web_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:security-group/sg-0c2e555a73a2eb3aa",
            "description": "DB Tier SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2e555a73a2eb3aa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0413b19ec3af25c00"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg-us-east-2",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg-us-east-2"
            },
            "tags_all": {
              "Name": "db-sg-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main",
            "module.security_groups_secondary.aws_security_group.alb_external_sg",
            "module.security_groups_secondary.aws_security_group.app_sg",
            "module.security_groups_secondary.aws_security_group.web_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:015117030551:security-group/sg-02091ff6699df9958",
            "description": "Web Tier SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02091ff6699df9958",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090c081acc6c44652"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090c081acc6c44652"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg-us-east-2",
            "name_prefix": "",
            "owner_id": "015117030551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-us-east-2"
            },
            "tags_all": {
              "Name": "web-sg-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main",
            "module.security_groups_secondary.aws_security_group.alb_external_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_alb_asg_primary",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:loadbalancer/app/alb-web-e1-2686d88c/ff2303dd32102e8d",
            "arn_suffix": "app/alb-web-e1-2686d88c/ff2303dd32102e8d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-web-e1-2686d88c-1712941775.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:015117030551:loadbalancer/app/alb-web-e1-2686d88c/ff2303dd32102e8d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-web-e1-2686d88c",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bd7edccf89a61363"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f6080adf93eba39"
              },
              {
                "subnet_id": "subnet-0f9ff3943622b57e5"
              }
            ],
            "subnets": [
              "subnet-02f6080adf93eba39",
              "subnet-0f9ff3943622b57e5"
            ],
            "tags": {
              "Name": "alb-web-e1"
            },
            "tags_all": {
              "Name": "alb-web-e1"
            },
            "vpc_id": "vpc-0b906e421c277c322",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main",
            "module.security_groups_primary.aws_security_group.alb_external_sg",
            "module.security_groups_primary.aws_security_group.alb_internal_sg",
            "module.security_groups_primary.aws_security_group.app_sg",
            "module.security_groups_primary.aws_security_group.db_sg",
            "module.security_groups_primary.aws_security_group.web_sg",
            "module.web_alb_asg_primary.random_id.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.web_alb_asg_primary",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:listener/app/alb-web-e1-2686d88c/ff2303dd32102e8d/be6e54b781e57727",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:targetgroup/tg-web-e1-2686d88c/e9664b6d691dc8d6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:015117030551:listener/app/alb-web-e1-2686d88c/ff2303dd32102e8d/be6e54b781e57727",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:loadbalancer/app/alb-web-e1-2686d88c/ff2303dd32102e8d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main",
            "module.security_groups_primary.aws_security_group.alb_external_sg",
            "module.security_groups_primary.aws_security_group.alb_internal_sg",
            "module.security_groups_primary.aws_security_group.app_sg",
            "module.security_groups_primary.aws_security_group.db_sg",
            "module.security_groups_primary.aws_security_group.web_sg",
            "module.web_alb_asg_primary.aws_lb.this",
            "module.web_alb_asg_primary.aws_lb_target_group.this",
            "module.web_alb_asg_primary.random_id.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.web_alb_asg_primary",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015117030551:targetgroup/tg-web-e1-2686d88c/e9664b6d691dc8d6",
            "arn_suffix": "targetgroup/tg-web-e1-2686d88c/e9664b6d691dc8d6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:015117030551:targetgroup/tg-web-e1-2686d88c/e9664b6d691dc8d6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-web-e1-2686d88c",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-web-e1"
            },
            "tags_all": {
              "Name": "tg-web-e1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b906e421c277c322"
          },
          "dependencies": [
            "module.networking_primary.aws_eip.nat_eip",
            "module.networking_primary.aws_internet_gateway.igw",
            "module.networking_primary.aws_nat_gateway.nat",
            "module.networking_primary.aws_route_table.private_app",
            "module.networking_primary.aws_route_table.private_db",
            "module.networking_primary.aws_route_table.public",
            "module.networking_primary.aws_route_table_association.private_app",
            "module.networking_primary.aws_route_table_association.private_db",
            "module.networking_primary.aws_route_table_association.public",
            "module.networking_primary.aws_subnet.app_subnets",
            "module.networking_primary.aws_subnet.db_subnets",
            "module.networking_primary.aws_subnet.public_subnets",
            "module.networking_primary.aws_vpc.main",
            "module.security_groups_primary.aws_security_group.alb_external_sg",
            "module.security_groups_primary.aws_security_group.alb_internal_sg",
            "module.security_groups_primary.aws_security_group.app_sg",
            "module.security_groups_primary.aws_security_group.db_sg",
            "module.security_groups_primary.aws_security_group.web_sg",
            "module.web_alb_asg_primary.random_id.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_alb_asg_secondary",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:loadbalancer/app/alb-web-e2-81ec9b7b/81afe1fc8d77b76b",
            "arn_suffix": "app/alb-web-e2-81ec9b7b/81afe1fc8d77b76b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-web-e2-81ec9b7b-1286826706.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:015117030551:loadbalancer/app/alb-web-e2-81ec9b7b/81afe1fc8d77b76b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-web-e2-81ec9b7b",
            "preserve_host_header": false,
            "security_groups": [
              "sg-090c081acc6c44652"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d54ef60706fe65a"
              },
              {
                "subnet_id": "subnet-0f0148a4bda4f58b6"
              }
            ],
            "subnets": [
              "subnet-06d54ef60706fe65a",
              "subnet-0f0148a4bda4f58b6"
            ],
            "tags": {
              "Name": "alb-web-e2"
            },
            "tags_all": {
              "Name": "alb-web-e2"
            },
            "vpc_id": "vpc-054d10f11cafece0f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main",
            "module.security_groups_secondary.aws_security_group.alb_external_sg",
            "module.security_groups_secondary.aws_security_group.alb_internal_sg",
            "module.security_groups_secondary.aws_security_group.app_sg",
            "module.security_groups_secondary.aws_security_group.db_sg",
            "module.security_groups_secondary.aws_security_group.web_sg",
            "module.web_alb_asg_secondary.random_id.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.web_alb_asg_secondary",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:listener/app/alb-web-e2-81ec9b7b/81afe1fc8d77b76b/3593033079d56494",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:targetgroup/tg-web-e2-81ec9b7b/d347a6daa491cfd3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:015117030551:listener/app/alb-web-e2-81ec9b7b/81afe1fc8d77b76b/3593033079d56494",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:loadbalancer/app/alb-web-e2-81ec9b7b/81afe1fc8d77b76b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main",
            "module.security_groups_secondary.aws_security_group.alb_external_sg",
            "module.security_groups_secondary.aws_security_group.alb_internal_sg",
            "module.security_groups_secondary.aws_security_group.app_sg",
            "module.security_groups_secondary.aws_security_group.db_sg",
            "module.security_groups_secondary.aws_security_group.web_sg",
            "module.web_alb_asg_secondary.aws_lb.this",
            "module.web_alb_asg_secondary.aws_lb_target_group.this",
            "module.web_alb_asg_secondary.random_id.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.web_alb_asg_secondary",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:015117030551:targetgroup/tg-web-e2-81ec9b7b/d347a6daa491cfd3",
            "arn_suffix": "targetgroup/tg-web-e2-81ec9b7b/d347a6daa491cfd3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:015117030551:targetgroup/tg-web-e2-81ec9b7b/d347a6daa491cfd3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-web-e2-81ec9b7b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-web-e2"
            },
            "tags_all": {
              "Name": "tg-web-e2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-054d10f11cafece0f"
          },
          "dependencies": [
            "module.networking_secondary.aws_eip.nat_eip",
            "module.networking_secondary.aws_internet_gateway.igw",
            "module.networking_secondary.aws_nat_gateway.nat",
            "module.networking_secondary.aws_route_table.private_app",
            "module.networking_secondary.aws_route_table.private_db",
            "module.networking_secondary.aws_route_table.public",
            "module.networking_secondary.aws_route_table_association.private_app",
            "module.networking_secondary.aws_route_table_association.private_db",
            "module.networking_secondary.aws_route_table_association.public",
            "module.networking_secondary.aws_subnet.app_subnets",
            "module.networking_secondary.aws_subnet.db_subnets",
            "module.networking_secondary.aws_subnet.public_subnets",
            "module.networking_secondary.aws_vpc.main",
            "module.security_groups_secondary.aws_security_group.alb_external_sg",
            "module.security_groups_secondary.aws_security_group.alb_internal_sg",
            "module.security_groups_secondary.aws_security_group.app_sg",
            "module.security_groups_secondary.aws_security_group.db_sg",
            "module.security_groups_secondary.aws_security_group.web_sg",
            "module.web_alb_asg_secondary.random_id.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}